--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
  *
  */
 
+
 /*  ---------------------------------------------------------------------------
     Table of Contents
     ---------------------------------------------------------------------------
@@ -35,6 +36,7 @@
 
 */
 
+
 /**
 *
 * ---------------------------------------------------------------------------
@@ -48,6 +50,7 @@
 * --------------------------------------------------------------------------- 
 *
 */
+
 
 /*
 * ---------------------------------------------------------------------------
@@ -143,6 +146,7 @@ input:focus {
     padding: 100px 0;
 }
 
+
 /***** ----- preloader part start ----- *****/
 
 .preloader {
@@ -191,7 +195,9 @@ input:focus {
     }
 }
 
+
 /***** ----- preloader part end ----- *****/
+
 
 /***** section title star *****/
 
@@ -259,7 +265,9 @@ input:focus {
     margin: auto;
 }
 
+
 /***** section title end *****/
+
 
 /***** button part star *****/
 
@@ -347,7 +355,9 @@ input:focus {
     transform: translate(0px, -150px);
 }
 
+
 /***** button part end *****/
+
 
 /***** Scroll top  *****/
 
@@ -370,6 +380,7 @@ input:focus {
     background-color: #CC446C;
     transition: 0.5s;
 }
+
 
 /***** page title  *****/
 
@@ -424,7 +435,7 @@ input:focus {
     margin: 0;
 }
 
-.breadcrumb > li + li::before {
+.breadcrumb>li+li::before {
     font-size: 14px;
 }
 
@@ -433,10 +444,11 @@ ul.breadcrumb li a {
     font-size: 14px;
 }
 
-.breadcrumb > .active {
+.breadcrumb>.active {
     color: #fff;
     font-size: 14px;
 }
+
 
 /*  ==========================
         header area
@@ -453,6 +465,7 @@ ul.breadcrumb li a {
     left: 0;
     width: 100%;
 }
+
 
 /***** ----- menu part ----- *****/
 
@@ -520,9 +533,9 @@ nav {
     color: #CC446C !important;
 }
 
-.main-menu ul li.active > a,
-.main-menu ul li.active > a:focus,
-.main-menu ul li.active > a:hover {
+.main-menu ul li.active>a,
+.main-menu ul li.active>a:focus,
+.main-menu ul li.active>a:hover {
     background-color: transparent !important;
     position: relative;
     color: #CC446C !important;
@@ -534,15 +547,15 @@ nav {
     transform: scale(1, 1);
 }
 
-.main-menu ul li > a:hover:before {
+.main-menu ul li>a:hover:before {
     -webkit-transform: scale(1, 1);
     -ms-transform: scale(1, 1);
     transform: scale(1, 1);
 }
 
-.navbar-default .navbar-nav > .open > a,
-.navbar-default .navbar-nav > .open > a:focus,
-.navbar-default .navbar-nav > .open > a:hover {
+.navbar-default .navbar-nav>.open>a,
+.navbar-default .navbar-nav>.open>a:focus,
+.navbar-default .navbar-nav>.open>a:hover {
     background-color: transparent;
     color: #fff;
 }
@@ -565,8 +578,8 @@ nav {
     font-size: 14px;
 }
 
-.dropdown-menu > li > a:focus,
-.dropdown-menu > li > a:hover {
+.dropdown-menu>li>a:focus,
+.dropdown-menu>li>a:hover {
     background-color: transparent;
 }
 
@@ -642,6 +655,7 @@ nav {
     }
 }
 
+
 /*  ==========================
         banner area
     ========================== */
@@ -649,7 +663,7 @@ nav {
 .banner-area .owl-nav .owl-next i,
 .banner-area .owl-nav .owl-prev i,
 .single-banner::after {
-    background-color: rgba(0, 0, 0, 0.65) !important;
+    /* background-color: rgba(0, 0, 0, 0.65) !important; */
 }
 
 .single-banner {
@@ -712,6 +726,7 @@ nav {
 .itembg {
     display: none;
 }
+
 
 /* Slider navigation */
 
@@ -791,6 +806,7 @@ nav {
     transform: scale(1);
 }
 
+
 /* Slide dots */
 
 .banner-area .owl-dots {
@@ -814,6 +830,7 @@ nav {
     background-size: cover !important;
     border: 2px solid #CC446C;
 }
+
 
 /*  ==========================
         donate wraper area
@@ -851,7 +868,6 @@ nav {
     position: relative
 }
 
-
 .donate-wraper-bg-two::before {
     position: absolute;
     background-color: rgba(203, 67, 108, 0.60);
@@ -872,6 +888,7 @@ nav {
     height: 100%;
     content: "";
 }
+
 
 /*  ==========================
         about us area
@@ -905,6 +922,7 @@ nav {
     margin-bottom: 20px;
     font-size: 22px
 }
+
 
 /***** service *****/
 
@@ -955,6 +973,7 @@ nav {
     position: relative;
     border: 1px solid #CC446C;
 }
+
 
 /*  ==========================
         donate count area
@@ -1045,6 +1064,7 @@ nav {
     margin: 30px 0 0;
 }
 
+
 /*  ==========================
         causes area
     ========================== */
@@ -1110,6 +1130,7 @@ nav {
 .single-causes-area .causes-info {
     margin: 0;
 }
+
 
 /*  ==========================
         video area
@@ -1203,6 +1224,7 @@ nav {
     -webkit-animation-name: hvr-ripple-out;
     animation-name: hvr-ripple-out;
 }
+
 
 /*  ================================
         gallery area
@@ -1314,6 +1336,7 @@ nav {
 .single-gallery:hover .gallery-lightbox h2 {
     left: 0;
 }
+
 
 /*  ================================
         volunteers area
@@ -1461,6 +1484,7 @@ textarea.form-control {
     margin-bottom: 30px;
 }
 
+
 /*  ================================
         events area
     ================================ */
@@ -1545,6 +1569,7 @@ textarea.form-control {
     font-size: 20px;
     font-weight: 700;
 }
+
 
 /***** single-events *****/
 
@@ -1637,6 +1662,7 @@ textarea.form-control {
     margin: 0;
 }
 
+
 /*  ================================
         donation area
     ================================ */
@@ -1711,6 +1737,7 @@ textarea.form-control {
     font-weight: 500;
     font-size: 14px;
 }
+
 
 /*  ================================
         testmonial area
@@ -1813,7 +1840,7 @@ textarea.form-control {
     color: #CC446C;
 }
 
-.single-progress-dec > span {
+.single-progress-dec>span {
     font-size: 30px;
     font-weight: 600;
     display: inline-block;
@@ -1826,6 +1853,7 @@ textarea.form-control {
     font-weight: 800;
     text-transform: uppercase;
 }
+
 
 /*  ================================
         blog area
@@ -2195,7 +2223,9 @@ h3.comment-heading {
     color: #fff;
 }
 
+
 /***** single blog *****/
+
 
 /***** sidebar *****/
 
@@ -2294,7 +2324,7 @@ h3.comment-heading {
     width: 30%;
 }
 
-.post-img > img {
+.post-img>img {
     height: 100%;
     width: 100%;
 }
@@ -2426,6 +2456,7 @@ p.success {
 p.error {
     color: red;
 }
+
 
 /*  ================================
         footer area
