--- a/style.css
+++ b/style.css
@@ -854,17 +854,17 @@ nav {
 }
 
 .donate-wraper-bg-one {
-    background: url('img/about/01.jpg') no-repeat scroll center top / cover;
+    background: url('img/about/hf1.PNG') no-repeat scroll center top / cover;
     position: relative
 }
 
 .donate-wraper-bg-two {
-    background: url('img/about/02.jpg') no-repeat scroll center top / cover;
+    background: url('img/about/fs.JPG') no-repeat scroll center top / cover;
     position: relative
 }
 
 .donate-wraper-bg-three {
-    background: url('img/about/03.jpg') no-repeat scroll center top / cover;
+    background: url('img/about/st.JPG') no-repeat scroll center top / cover;
     position: relative
 }
 
