--- a/style.css
+++ b/style.css
@@ -980,7 +980,7 @@ nav {
     ========================== */
 
 .donate-count-area {
-    background: url('img/about/donate-bg.jpg') no-repeat scroll center top / cover;
+    background: url('img/about/fs.JPG') no-repeat scroll center top / cover;
     position: relative
 }
 
@@ -1137,7 +1137,7 @@ nav {
     ========================== */
 
 .video-area {
-    background: url('img/about/donate-bg.jpg') no-repeat scroll center top / cover;
+    background: url('img/about/gun.jpg') no-repeat scroll center top / cover;
     position: relative;
     padding: 50px 0;
 }
