contact form remove

--- a/style.css
+++ b/style.css
@@ -859,12 +859,12 @@ nav {
 }
 
 .donate-wraper-bg-two {
-    background: url('img/about/food.JPG') no-repeat scroll center top / cover;
+    background: url('img/about/st2.JPG') no-repeat scroll center top / cover;
     position: relative
 }
 
 .donate-wraper-bg-three {
-    background: url('img/about/st2.JPG') no-repeat scroll center top / cover;
+    background: url('img/about/honey.PNG') no-repeat scroll center top / cover;
     position: relative
 }
 
