--- a/style.css
+++ b/style.css
@@ -1814,7 +1814,7 @@ textarea.form-control {
     ================================ */
 
 .progress-area {
-    background: rgba(0, 0, 0, 0) url("img/project-bg.jpg") no-repeat scroll 0 0 / cover;
+    background: rgba(0, 0, 0, 0) url("img/project.JPG") no-repeat scroll 0 0 / cover;
     position: relative;
     padding: 50px 0;
 }
