--- a/style.css
+++ b/style.css
@@ -888,7 +888,7 @@ header.sticky-header #navigation5 .nav-menu>li>a:after {
 }
 
 .rev-btn {
-    background: #F9BF3B;
+    background: red;
 }
 
 .rev-btn:hover {
