--- a/css/theme.css
+++ b/css/theme.css
@@ -3,7 +3,7 @@
            ==Color Presets==
 ************************************************ 
 */
-
+.tp-caption .rev-btn .tp-withaction .rs-hover-ready {display: flex !important; margin-left: auto !important; margin-right: auto !important; }
 /*======================================
                 Primary Color
 ======================================*/
