--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,5 @@
+
+
 /* ==============================================
 ==================Large Display==============*/
 
@@ -103,9 +105,14 @@
     .gallery-img img {
         width: 100%;
     }
+
+    .gallery-img iframe {
+        width: 100%;
+    }
+    
     .fig__caption {
-        -webkit-transform: translate(35%, -20%);
-        transform: translate(35%, -20%);
+        -webkit-transform: translate(0%, -20%);
+        transform: translate(0%, -20%);
         text-align: center;
     }
     .fig__caption h3 {
