--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ img {
     height: auto;
 }
 
+iframe {
+    max-width: 100%;
+    height: auto;
+}
+
 .fix {
     overflow: hidden;
 }
@@ -655,7 +660,7 @@ span.t__header__left {
 .nav-menu>li>a {
     height: 78px;
     padding: 30px 0;
-    color: #ddd;
+    color:black;
 }
 
 .nav>li>a:focus,
@@ -666,7 +671,7 @@ span.t__header__left {
 .nav-menu>li:hover>a,
 .nav-menu>.active>a,
 .nav-menu>.focus>a {
-    color: #F9BF3B;
+    color: #9e1030;
 }
 
 
@@ -687,7 +692,7 @@ header.sticky-header {
     padding: 0;
     z-index: 999;
     top: 0;
-    background: #222;
+    background:white;
     box-shadow: rgba(0, 0, 0, .15) 0px 1px 6px;
 }
 
@@ -712,7 +717,7 @@ header.sticky-header .nav-logo>img {
 header.sticky-header .nav-menu>li:hover>a,
 header.sticky-header .nav-menu>.active>a,
 header.sticky-header .nav-menu>.focus>a {
-    color: #F9BF3B;
+    color: red;
 }
 
 .nav-menu>li>a {
@@ -728,8 +733,8 @@ header.sticky-header .nav-menu>.focus>a {
 }
 
 .nav-toggle:before {
-    background-color: #ddd;
-    box-shadow: 0 0.5em 0 0 #ddd, 0 1em 0 0 #ddd;
+    background-color: red;
+    box-shadow: 0 0.5em 0 0 red, 0 1em 0 0 red;
 }
 
 .nav-menus-wrapper-close-button {
@@ -779,7 +784,7 @@ Mobile nav
 ------------------------------------------*/
 
 .navigation-portrait .nav-menus-wrapper {
-    background-color: #111;
+    background-color: white;
 }
 
 .navigation-portrait .nav-menu>li {
@@ -974,7 +979,7 @@ service V2
 
 .service_2 .v2_service_block i {
     font-size: 30px;
-    background: #f9bf3b;
+    background:orangered;
     color: #fff;
     height: 66px;
     line-height: 66px;
@@ -1128,7 +1133,7 @@ service V2
 }
 
 .feaures__block p {
-    color: #aaa;
+    color: yellow;
 }
 
 
@@ -1210,6 +1215,9 @@ Portfolio Caption
 
 .gallery-img {
     position: relative;
+    max-width: 380px;
+    height: 394px;
+    overflow: hidden;
 }
 
 .grid figure {
@@ -1233,14 +1241,20 @@ Portfolio Caption
 }
 
 .fig__caption {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    -webkit-transition: .4s;
-    transition: .4s;
-    -webkit-transform: translate(80%, -80%);
-    transform: translate(80%, -80%);
-    text-align: center;
+    /* position: absolute; */
+    /* bottom: 0; */
+    /* left: 0; */
+    /* -webkit-transition: .4s; */
+    /* transition: .4s; */
+    /* -webkit-transform: translate(80%, -80%); */
+    /* transform: translate(80%, -80%); */
+    /* text-align: center; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
 .grid figure:hover figcaption {
@@ -1265,7 +1279,7 @@ Portfolio Caption
 ------------------------------------------*/
 
 .load-more {
-    background: #f9bf3b;
+    background: orangered;
     color: #fff;
     width: 200px;
     height: 55px;
